--- a/app/src/main/res/layout/fragment_img2img.xml
+++ b/app/src/main/res/layout/fragment_img2img.xml
@@ -6,6 +6,60 @@
     android:layout_height="match_parent"
     tools:context=".ui.img2img.Img2ImgFragment">
 
+
+    <TextView
+        android:id="@+id/img2imgTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Image to Image"
+        android:textAppearance="?attr/textAppearanceHeadline6"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <!-- Выбор фото -->
+    <Button
+        android:id="@+id/choosePhotoButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Choose photo"
+        app:layout_constraintTop_toBottomOf="@id/img2imgTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Промпты -->
+    <EditText
+        android:id="@+id/promptInput"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Enter prompt"
+        app:layout_constraintTop_toBottomOf="@id/choosePhotoButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp" />
+
+    <EditText
+        android:id="@+id/negativePromptInput"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Enter negative prompt"
+        app:layout_constraintTop_toBottomOf="@id/promptInput"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp" />
+
+    <!-- Кнопка "Imagine" -->
+    <Button
+        android:id="@+id/imagineButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Imagine"
+        app:layout_constraintTop_toBottomOf="@id/negativePromptInput"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="16dp" />
+
     <TextView
         android:id="@+id/text_img2img"
         android:layout_width="match_parent"
@@ -17,7 +71,9 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.793" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
