--- a/app/src/main/res/layout/fragment_img2img.xml
+++ b/app/src/main/res/layout/fragment_img2img.xml
@@ -6,74 +6,237 @@
     android:layout_height="match_parent"
     tools:context=".ui.img2img.Img2ImgFragment">
 
-
-    <TextView
-        android:id="@+id/img2imgTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Image to Image"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <!-- Выбор фото -->
-    <Button
-        android:id="@+id/choosePhotoButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Choose photo"
-        app:layout_constraintTop_toBottomOf="@id/img2imgTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- Промпты -->
-    <EditText
-        android:id="@+id/promptInput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Enter prompt"
-        app:layout_constraintTop_toBottomOf="@id/choosePhotoButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp" />
-
-    <EditText
-        android:id="@+id/negativePromptInput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Enter negative prompt"
-        app:layout_constraintTop_toBottomOf="@id/promptInput"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp" />
-
-    <!-- Кнопка "Imagine" -->
-    <Button
-        android:id="@+id/imagineButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Imagine"
-        app:layout_constraintTop_toBottomOf="@id/negativePromptInput"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="16dp" />
-
-    <TextView
-        android:id="@+id/text_img2img"
+    <ScrollView
+        android:id="@+id/img2img"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.793" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/img2imgTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Image to Image"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:layout_margin="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/prompt" />
+            <EditText
+                android:id="@+id/prompt"
+                android:layout_width="237dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="Enter prompt"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/negative"
+                android:layout_marginTop="10dp" />
+
+            <EditText
+                android:id="@+id/negativePrompt"
+                android:layout_width="237dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="Enter negative prompt"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/prompt" />
+            <Spinner
+                android:id="@+id/type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="10dp" />
+
+            <Button
+                android:id="@+id/upload"
+                android:layout_width="237dp"
+                android:layout_height="wrap_content"
+                android:text="Choose photo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/img2imgTitle" />
+            <TextView
+                android:id="@+id/imageName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:singleLine="true"
+                android:layout_marginTop="35dp"
+                android:layout_marginBottom="10dp"
+                android:textSize="10sp"
+                android:textColor="#FF0000"
+                android:ellipsize="end" />
+
+            <AutoCompleteTextView
+                android:id="@+id/model"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:imeOptions="actionNext"
+                android:layout_marginBottom="10dp" />
+
+            <AutoCompleteTextView
+                android:id="@+id/sampler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:imeOptions="actionNext"
+                android:layout_marginBottom="10dp" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/height"
+                android:layout_marginTop="10dp" />
+            <EditText
+                android:id="@+id/height"
+                android:layout_width="237dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="@string/height"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/textView2"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/width"
+                android:layout_marginTop="10dp" />
+            <EditText
+                android:id="@+id/width"
+                android:layout_width="237dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="@string/width"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/textView3"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/steps"
+                android:layout_marginTop="10dp" />
+            <EditText
+                android:id="@+id/steps"
+                android:layout_width="237dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="@string/steps"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/textView4"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/seed"
+                android:layout_marginTop="10dp" />
+            <EditText
+                android:id="@+id/seed"
+                android:layout_width="237dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="@string/seed"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/textView5"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/promptStrength"
+                android:layout_marginTop="10dp" />
+            <EditText
+                android:id="@+id/promptStrength"
+                android:layout_width="237dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="@string/promptStrength"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/textView6"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/imageStrength"
+                android:layout_marginTop="10dp" />
+            <EditText
+                android:id="@+id/imageStrength"
+                android:layout_width="237dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="@string/imageStrength"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+            <EditText
+                android:id="@+id/apikey"
+                android:layout_width="237dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="@string/apikey"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+            <CheckBox
+                android:id="@+id/nsfw"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layoutDirection="rtl"
+                android:text="@string/nsfw"
+                android:singleLine="true"
+                android:layout_marginTop="10dp" />
+
+            <CheckBox
+                android:id="@+id/censor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layoutDirection="rtl"
+                android:text="@string/censor"
+                android:singleLine="true"
+                android:layout_marginTop="10dp" />
+            <Button
+                android:id="@+id/generate"
+                android:layout_width="237dp"
+                android:layout_height="wrap_content"
+                android:text="@string/generate"
+                app:layout_constraintTop_toBottomOf="@id/negativePrompt"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_margin="16dp" />
+            <TextView
+                android:id="@+id/text_img2img"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                />
+        </LinearLayout>
+    </ScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
