--- a/app/src/main/res/layout/image_display.xml
+++ b/app/src/main/res/layout/image_display.xml
@@ -6,7 +6,8 @@
     android:layout_gravity="center|top"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.ImageDisplayFragment">
 
     <ScrollView
         android:orientation="vertical"
@@ -19,7 +20,7 @@
         android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageDisplay"
+        android:id="@+id/imageDisplayPicture"
         android:layout_width="match_parent"
         android:layout_height="384dp"
         android:layout_marginBottom="3dp"
