--- a/app/src/main/res/layout/image_display.xml
+++ b/app/src/main/res/layout/image_display.xml
@@ -100,17 +100,17 @@
         android:layout_weight="1.0"
         android:orientation="vertical">
     </LinearLayout>
-    <Button
-        android:id="@+id/regenerate"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3.0"
-        android:text="@string/regenerate"
-        android:textColor="#ffffff"
-        android:padding="8dp"
-        android:background="@drawable/button_border"
-        android:textSize="18sp"
-        android:textAlignment="center" />
+<!--    <Button-->
+<!--        android:id="@+id/regenerate"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_weight="3.0"-->
+<!--        android:text="@string/regenerate"-->
+<!--        android:textColor="#ffffff"-->
+<!--        android:padding="8dp"-->
+<!--        android:background="@drawable/button_border"-->
+<!--        android:textSize="18sp"-->
+<!--        android:textAlignment="center" />-->
     </LinearLayout>
 
     <LinearLayout
