--- a/app/src/main/res/layout/image_gallery.xml
+++ b/app/src/main/res/layout/image_gallery.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/imgG"
     android:layout_height="wrap_content"
-    android:paddingBottom="20dp"
+    android:paddingBottom="55dp"
     android:background="#EDEDED"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
@@ -12,37 +14,72 @@
         android:layout_width="match_parent"
         android:layout_height="384dp"
         android:layout_marginBottom="3dp"
-        tools:srcCompat="@tools:sample/avatars"/>
+        app:layout_constraintBottom_toTopOf="@+id/seedGalleryDisplay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints"
+        tools:srcCompat="@tools:sample/avatars" />
+
     <TextView
         android:id="@+id/seedGalleryDisplay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/seedUsed"
         android:textAlignment="center"
+        android:textIsSelectable="true"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:textIsSelectable="true" />
+        app:layout_constraintBottom_toTopOf="@+id/promptGalleryDisplay"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp" />
+
     <TextView
         android:id="@+id/promptGalleryDisplay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_marginBottom="31dp"
         android:text="@string/promptUsed"
         android:textAlignment="center"
+        android:textIsSelectable="true"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:textIsSelectable="true" />
+        app:layout_constraintBottom_toTopOf="@+id/saveImage"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/delete"
+        android:layout_width="94dp"
+        android:layout_height="67dp"
+        android:layout_marginTop="29dp"
+        android:padding="8dp"
+        android:text="@string/delete"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/promptGalleryDisplay"
+        tools:ignore="MissingConstraints" />
+
     <Button
         android:id="@+id/saveImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/download"
+        android:layout_width="263dp"
+        android:layout_height="65dp"
+        android:layout_weight="2"
         android:drawableLeft="@drawable/baseline_download_24"
-        android:textColor="#ffffff"
         android:padding="8dp"
+        android:text="@string/download"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
         android:textSize="18sp"
-        android:textAlignment="center" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/delete"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
