--- a/app/src/main/res/drawable/button_border.xml
+++ b/app/src/main/res/drawable/button_border.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#3498db" />
-    <stroke
-        android:width="4dp"
-        android:color="#000000" />
+    <corners android:radius="25dp" />
 </shape>
