--- a/app/src/main/res/layout/fragment_img2img.xml
+++ b/app/src/main/res/layout/fragment_img2img.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/img2"
     android:layout_height="match_parent"
     tools:context=".ui.img2img.Img2ImgFragment">
 
@@ -69,17 +70,18 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/img2imgTitle" />
+
             <TextView
                 android:id="@+id/imageName"
-                android:layout_width="wrap_content"
+                android:layout_width="148dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:singleLine="true"
                 android:layout_marginTop="35dp"
                 android:layout_marginBottom="10dp"
-                android:textSize="10sp"
+                android:ellipsize="end"
+                android:singleLine="true"
                 android:textColor="#FF0000"
-                android:ellipsize="end" />
+                android:textSize="10sp" />
 
             <AutoCompleteTextView
                 android:id="@+id/model"
