0802 add Auth and Reg + settings

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_img2img">
+    app:startDestination="@+id/navigation_auth">
 
 
     <fragment
@@ -33,5 +33,16 @@
         android:name="com.example.sdapp.ui.GenerationFragment"
         android:label="@string/generate"
         tools:layout="@layout/generation" />
+    <fragment
+        android:id="@+id/navigation_auth"
+        android:name="com.example.sdapp.start.AuthFragment"
+        android:label="Auth"
+        tools:layout="@layout/fragment_auth" />
+    <fragment
+        android:id="@+id/navigation_reg"
+        android:name="com.example.sdapp.start.RegFragment"
+        android:label="Registration"
+        tools:layout="@layout/fragment_registration" />
+
 
 </navigation>
