--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -22,7 +22,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Ваш API-ключ" />
-
+    <Button
+        android:id="@+id/apiButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Получить АПИ"
+        android:backgroundTint="@color/purple_500"/>
     <Button
         android:id="@+id/saveButton"
         android:layout_width="match_parent"
