--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -33,13 +33,14 @@
     <!-- Галерея изображений -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/image_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
 
         android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="30dp"
+        android:layout_marginVertical="1dp"
 
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
 
 <!--    <TextView-->
