--- a/app/src/main/res/layout/image_gallery.xml
+++ b/app/src/main/res/layout/image_gallery.xml
@@ -11,20 +11,20 @@
     android:paddingRight="1dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+
 >
     <ImageView
         android:id="@+id/imageGalleryPicture"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="2dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:layout_margin="5dp"
         tools:ignore="MissingConstraints"
         tools:srcCompat="@tools:sample/avatars"
         android:background="@drawable/shape_rounded_image"
+        android:clipToOutline="true"
         />
 
 
